--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-nodejs-example",
+  "name": "helm-hello",
   "version": "1.0.0",
   "description": "node server",
   "main": "index.js",
@@ -11,14 +11,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bbachi/angular-nodejs-example.git"
+    "url": "git+https://github.com/mudamudiberkelas/helm-hello.git"
   },
-  "author": "Bhargav Bachina",
+  "author": "mudamudiberkelas",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/bbachi/angular-nodejs-example/issues"
+    "url": "https://github.com/mudamudiberkelas/helm-hello.git/issues"
   },
-  "homepage": "https://github.com/bbachi/angular-nodejs-example#readme",
+  "homepage": "https://github.com/mudamudiberkelas/helm-hello.git#readme",
   "dependencies": {
     "express": "^4.17.2"
   },
